# pypuwa

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/basic-project/: Pulumi.yaml  README.md  __main__.py  pyproject.toml  pypuwaconf.py
examples/basic-project/components/: container_app.py  database.py  redis.py
examples/basic-project/config/base/: __init__.py  stack.py
examples/basic-project/config/base/services/: __init__.py  api.py  redis.py  worker.py
examples/basic-project/config/environments/: production.py  staging.py
examples/basic-project/services/api/: entrypoint.py
examples/basic-project/services/worker/: entrypoint.py
src/pypuwa/: __init__.py  cli.py  components.py  config.py  env.py  interpolation.py  manager.py  secrets.py  stack.py
tests/: test_components.py  test_env.py  test_interpolation.py  test_manager.py  test_secrets.py
