[project]
name = "pypuwa"
version = "0.1.3"
description = "Python Pulumi Wrapper - Dataclass-based configuration framework for Pulumi infrastructure as code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "cafadev" },
]
keywords = ["pulumi", "infrastructure", "configuration", "dataclass", "iac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pyyaml>=6.0",
    "questionary>=2.0",
]

[project.scripts]
pypuwa = "pypuwa.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/cafadev/pypuwa"
Repository = "https://github.com/cafadev/pypuwa"
Issues = "https://github.com/cafadev/pypuwa/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pypuwa"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "pulumi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "questionary.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
